; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_acl.c_has_privs_of_role.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_acl.c_has_privs_of_role.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @has_privs_of_role(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 1, i32* %3, align 4
  br label %20

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  %12 = call i64 @superuser_arg(i64 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32 1, i32* %3, align 4
  br label %20

15:                                               ; preds = %10
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @roles_has_privs_of(i64 %16)
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @list_member_oid(i32 %17, i64 %18)
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %15, %14, %9
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i64 @superuser_arg(i64) #1

declare dso_local i32 @list_member_oid(i32, i64) #1

declare dso_local i32 @roles_has_privs_of(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
